--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/Users/Chris/eclipse/spaceExplorer/lib/slick/lib/lwjgl.jar"/>
-	<classpathentry kind="lib" path="/Users/Chris/eclipse/spaceExplorer/lib/slick/lib/natives-linux.jar"/>
-	<classpathentry kind="lib" path="/Users/Chris/eclipse/spaceExplorer/lib/slick/lib/natives-mac.jar"/>
-	<classpathentry kind="lib" path="/Users/Chris/eclipse/spaceExplorer/lib/slick/lib/slick.jar"/>
+	<classpathentry kind="lib" path="lib/slick/lib/ibxm.jar"/>
+	<classpathentry kind="lib" path="lib/slick/lib/jinput.jar"/>
+	<classpathentry kind="lib" path="lib/slick/lib/jnlp.jar"/>
+	<classpathentry kind="lib" path="lib/slick/lib/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="lib/slick/lib/lwjgl.jar"/>
+	<classpathentry kind="lib" path="lib/slick/lib/natives-linux.jar"/>
+	<classpathentry kind="lib" path="lib/slick/lib/natives-mac.jar"/>
+	<classpathentry kind="lib" path="lib/slick/lib/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
